[package]
name = "vswhere"
version = "0.2.0"
authors = ["FaultyRAM <316014+FaultyRAM@users.noreply.github.com>"]
edition = "2018"
description = "Provides support for invoking and capturing the output of the vswhere utility."
repository = "https://github.com/FaultyRAM/vswhere-rs"
keywords = ["vs2017", "detection", "query"]
categories = ["development-tools::build-utils"]
license = "Apache-2.0 OR MIT"
