[package]
name = "vswhere"
version = "0.2.0"
authors = ["FaultyRAM <316014+FaultyRAM@users.noreply.github.com>"]
edition = "2018"
description = "Provides support for invoking and capturing the output of the vswhere utility."
repository = "https://github.com/FaultyRAM/vswhere-rs"
keywords = ["vs2017", "detection", "query"]
categories = ["development-tools::build-utils"]
license = "Apache-2.0 OR MIT"

[target.'cfg(target_os = "windows")'.dependencies.serde_json]
version = "^1.0.0"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.0"
features = ["std", "combaseapi", "knownfolders", "shlobj", "winerror"]
